--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -16,7 +16,7 @@
 <% else %>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-    Hi!, <% current_user.email %>
+    Hi!, <%= current_user.email %>
     <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
